--- a/data/bash/assets/css/app.css
+++ b/data/bash/assets/css/app.css
@@ -1,5 +1,7 @@
 /*Stylesheet*/
-body, html {
+
+body,
+html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
@@ -13,6 +15,7 @@ body, html {
     background-color: #000000;
     overflow: hidden;
 }
+
 #orientation {
     margin: 0 auto;
     position: fixed;
@@ -28,6 +31,7 @@ body, html {
     z-index: 999;
     display: none;
 }
+
 #loader {
     width: 100%;
     height: 50px;
@@ -36,12 +40,14 @@ body, html {
     margin-top: 250px;
     display: block;
 }
+
 #loader,
 #loader:after {
     border-radius: 50%;
     width: 10em;
     height: 10em;
 }
+
 #loader {
     margin: 60px auto;
     font-size: 10px;
@@ -62,6 +68,7 @@ body, html {
     -webkit-animation: load8 1.1s infinite linear;
     animation: load8 1.1s infinite linear;
 }
+
 @-webkit-keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
@@ -72,6 +79,7 @@ body, html {
         transform: rotate(360deg);
     }
 }
+
 @keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
